fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/Territory_Quota__c.object-meta.xml
<CustomObject>
    <label>Territory Quota</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Quota</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Quota</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>