fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Baseline_Quota__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Quota__c</fullName>
    <formula>IF(Quota_Attribute__c = &quot;BASELINE QUOTA&quot;, Quota__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>