fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Baseline_Quota_to_date__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Quota_to_date__c</fullName>
    <formula>/* Quota for this month is prorated using the associated Run Rate */
if(AND (Date__c = Business_Days__r.Date_Key__c, Quota_Attribute__c = &quot;BASELINE QUOTA&quot;),
Quota__c * Business_Days__r.Run_Rate__c,
/* Else if Quota is in the future then Zero Quota */
if(AND (Date__c &gt; Business_Days__r.Date_Key__c, Quota_Attribute__c = &quot;BASELINE QUOTA&quot;),
0,
/* Else Previous Months are full quota */
if(Quota_Attribute__c = &quot;BASELINE QUOTA&quot;,
Quota__c,0
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Quota to date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>