fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Business_Days__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Days</label>
    <referenceTo>Business_Days__c</referenceTo>
    <relationshipLabel>Territory Quota</relationshipLabel>
    <relationshipName>Territory_Quota</relationshipName>
    <type>Lookup</type>
</CustomField>