fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan__c</fullName>
    <label>Comp Plan</label>
    <length>30</length>
    <type>Text</type>
</CustomField>