fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Compensation_Type__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Type__c</fullName>
    <label>Compensation Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>