fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Current_Fiscal_Month_Quota__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Month_Quota__c</fullName>
    <formula>AND(
MONTH(Date__c) = Current_Fiscal_Month_Number__c,
YEAR(Date__c) = YEAR(TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fiscal Month Quota</label>
    <type>Checkbox</type>
</CustomField>