fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Current_Fiscal_Month_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Month_Sales__c</fullName>
    <formula>MONTH(Date__c) = Current_Fiscal_Month_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fiscal Month Sales</label>
    <type>Checkbox</type>
</CustomField>