fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Current_Fiscal_Quarter_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Quarter_Sales__c</fullName>
    <formula>AND(
Current_Fiscal_Quarter_Number__c =  Fiscal_Quarter_Number__c,
YEAR(Date__c) = YEAR(TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Added YEAR(Date__c) = YEAR(TODAY())  to the formula - 20July2018 ESC</inlineHelpText>
    <label>Current Fiscal Quarter Sales</label>
    <type>Checkbox</type>
</CustomField>