fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Current_Fiscal_Year_Quota__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Year_Quota__c</fullName>
    <formula>YEAR(Date__c) = YEAR(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fiscal Year Quota</label>
    <type>Checkbox</type>
</CustomField>