fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Customer_Group_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Bucket__c</fullName>
    <formula>IF(
AND(Compensation_Type__c = &quot;EZIO&quot;,OR(TEXT(Territory_Master__r.Compensation_Profile__c) = &quot;EM&quot;, TEXT(Territory_Master__r.Compensation_Profile__c) = &quot;EMS&quot;)),&quot;&quot;,
IF(
AND(Compensation_Type__c = &quot;ALLOTHER&quot;, OR(TEXT(Territory_Master__r.Compensation_Profile__c) = &quot;EM&quot;, TEXT(Territory_Master__r.Compensation_Profile__c) = &quot;EMS&quot;, TEXT(Territory_Master__r.Compensation_Profile__c) = &quot;EMISR&quot;) ),&quot;All Other&quot;,
IF(
AND(Compensation_Type__c = &quot;CONTROL PLUS&quot;, OR(TEXT(Territory_Master__r.Compensation_Profile__c) = &quot;EM&quot;, TEXT(Territory_Master__r.Compensation_Profile__c) = &quot;EMS&quot;, TEXT(Territory_Master__r.Compensation_Profile__c) = &quot;EMISR&quot;) ),&quot;Control Plus&quot;,
Compensation_Type__c
)
)
)</formula>
    <label>Customer Group Bucket</label>
    <type>Text</type>
</CustomField>