fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Days_In__c.field-meta.xml
<CustomField>
    <fullName>Days_In__c</fullName>
    <formula>Business_Days__r.Days_In__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>