fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Days_Left_In_First_6m__c.field-meta.xml
<CustomField>
    <fullName>Days_Left_In_First_6m__c</fullName>
    <formula>Business_Days__r.Days_Left_In_First6m__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left In First 6m</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>