fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Days_Remaining_Yr__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining_Yr__c</fullName>
    <formula>Business_Days__r.Days_Left_Yrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining Yr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>