fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <formula>Territory_Master__r.Director__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director</label>
    <type>Text</type>
</CustomField>