fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Empty_Quota__c.field-meta.xml
<CustomField>
    <fullName>Empty_Quota__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Empty Quota</label>
    <type>Checkbox</type>
</CustomField>