fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Fiscal_Month_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Month_Multiplier__c</fullName>
    <formula>Business_Days__r.Fiscal_Month_Multiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Month Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>