fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Growth_Quota__c.field-meta.xml
<CustomField>
    <fullName>Growth_Quota__c</fullName>
    <formula>IF( Quota_Attribute__c = &quot;GROWTH QUOTA&quot;,Quota__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Growth Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>