fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Created by Workflow and used for associating to Sales
Format: Month Number - Year - Territory 
Ex: 9-2016-800158</inlineHelpText>
    <label>Key</label>
    <length>70</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>