fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Last_Fiscal_Month_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_Fiscal_Month_Sales__c</fullName>
    <formula>if(Current_Fiscal_Month_Number__c = 1,MONTH(Date__c) = 12,
MONTH(Date__c) = Current_Fiscal_Month_Number__c-1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Fiscal Month Sales</label>
    <type>Checkbox</type>
</CustomField>