fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <length>50</length>
    <type>Text</type>
</CustomField>