fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Month_Formula__c.field-meta.xml
<CustomField>
    <fullName>Month_Formula__c</fullName>
    <formula>CASE(MONTH(Date__c), 
1,&quot;January&quot;, 
2,&quot;February&quot;, 
3,&quot;March&quot;, 
4,&quot;April&quot;, 
5,&quot;May&quot;, 
6,&quot;June&quot;, 
7,&quot;July&quot;, 
8,&quot;August&quot;, 
9,&quot;September&quot;, 
10,&quot;October&quot;, 
11,&quot;November&quot;, 
12,&quot;December&quot;, 
&quot;Date Not Set&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Formula</label>
    <type>Text</type>
</CustomField>