fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <formula>if(Payee_ID__c &lt;&gt; &quot;ALL&quot;,
Territory_Master__r.Payee__c,
&quot;ALL&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee</label>
    <type>Text</type>
</CustomField>