fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Payee_ID__c.field-meta.xml
<CustomField>
    <fullName>Payee_ID__c</fullName>
    <label>Payee ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>