fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Quota_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Quota_Attribute__c</fullName>
    <description>Created to capture Baseline and Growth Quota for Surgical Dispo BU</description>
    <label>Quota Attribute</label>
    <length>50</length>
    <type>Text</type>
</CustomField>