fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Quota_Type__c.field-meta.xml
<CustomField>
    <fullName>Quota_Type__c</fullName>
    <formula>IF(UPPER(Payee_ID__c) = &quot;ALL&quot;,&quot;Territory&quot;,&quot;Individual&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota Type</label>
    <type>Text</type>
</CustomField>