fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Role_Rank__c.field-meta.xml
<CustomField>
    <fullName>Role_Rank__c</fullName>
    <formula>Territory_Master__r.Role_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>