fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Run_Rate__c</fullName>
    <formula>Business_Days__r.Run_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>