fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Sales_Manager_Filter__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Filter__c</fullName>
    <formula>if( AND(Role_Toggle__c = &quot;REP&quot;, ISBLANK( Territory_Master__r.Manager__c)), Territory_Master__r.Parent_Territory__r.Sales_Rep_Name__c ,
if( AND (Role_Toggle__c = &quot;REP&quot;,  Territory_Master__r.Manager__r.IsActive = true),Territory_Master__r.Manager_Name__c,
if( AND(Role_Toggle__c = &quot;REP&quot;, Territory_Master__r.Manager__r.IsActive = false), Territory_Master__r.Parent_Territory__r.Sales_Rep_Name__c ,
if(  AND (Role_Toggle__c = &quot;RSM&quot;,  Territory_Master__r.Sales_Rep__r.IsActive = true),  Territory_Master__r.Sales_Rep__r.FirstName &amp; &quot; &quot; &amp; Territory_Master__r.Sales_Rep__r.LastName,
NULL
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager Filter</label>
    <type>Text</type>
</CustomField>