fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Sales_Manager_Quota__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Quota__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Manager Quota</label>
    <type>Checkbox</type>
</CustomField>