fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Sales_Region_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Number__c</fullName>
    <formula>Territory_Master__r.Region_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Region Number</label>
    <type>Text</type>
</CustomField>