fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Territory_Master__c.field-meta.xml
<CustomField>
    <fullName>Territory_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Master</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Territory Quota</relationshipLabel>
    <relationshipName>Territory_Quota</relationshipName>
    <type>Lookup</type>
</CustomField>