fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/Workflow_Key__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Key__c</fullName>
    <formula>Payee_ID__c &amp; &quot;-&quot; &amp; Territory_Number__c &amp; &quot;-&quot; &amp; Comp_Plan__c &amp; &quot;-&quot; &amp; Compensation_Type__c &amp; &quot;-&quot; &amp; TEXT(Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Key</label>
    <type>Text</type>
</CustomField>