fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/X2H_Current_Fiscal_Month_Quota__c.field-meta.xml
<CustomField>
    <fullName>X2H_Current_Fiscal_Month_Quota__c</fullName>
    <description>Created to support Surgical H2 calendar</description>
    <formula>AND(
MONTH(Date__c) =  X2H_Current_Fiscal_Month_Number__c ,
YEAR(Date__c) = YEAR(TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2H Current Fiscal Month Quota</label>
    <type>Checkbox</type>
</CustomField>