fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/X2H_Days_in_Qtr__c.field-meta.xml
<CustomField>
    <fullName>X2H_Days_in_Qtr__c</fullName>
    <description>Created to support Surgical H2 calendar</description>
    <formula>Business_Days__r.Days_in_2H_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2H Days in Qtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>