fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/X2H_Quarter_Number__c.field-meta.xml
<CustomField>
    <fullName>X2H_Quarter_Number__c</fullName>
    <formula>/* 2021 */
if(TODAY() &gt; DATEVALUE(&quot;2021-09-27&quot;), 2,
if(TODAY() &gt; DATEVALUE(&quot;2021-06-28&quot;), 1,

/* 2020 */
if(TODAY() &gt; DATEVALUE(&quot;2020-09-28&quot;), 4,
if(TODAY() &gt; DATEVALUE(&quot;2020-06-29&quot;), 3,

0
))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2H Quarter Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>