fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/X2H_Quota_to_Date__c.field-meta.xml
<CustomField>
    <fullName>X2H_Quota_to_Date__c</fullName>
    <description>Created to support Surgical H2 calendar</description>
    <formula>/* Quota for this month is prorated using the associated Run Rate */
if(Date__c = Business_Days__r.Date_Key__c,
Quota__c * Business_Days__r.X2H_Run_Rate__c ,
/* Else if Quota is in the future then Zero Quota */
if(Date__c &gt; Business_Days__r.Date_Key__c,
0,
/* Else Previous Months are full quota */
Quota__c
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2H Quota to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>