fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/X7M_Current_Fiscal_Month_Sales__c.field-meta.xml
<CustomField>
    <fullName>X7M_Current_Fiscal_Month_Sales__c</fullName>
    <description>Created to support 7 month calendar for Anesthesia and EMS</description>
    <formula>MONTH(Date__c) = X7M_Current_Fiscal_Month_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7M Current Fiscal Month Sales</label>
    <type>Checkbox</type>
</CustomField>