fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/X7M_Current_Fiscal_Quarter_Quota__c.field-meta.xml
<CustomField>
    <fullName>X7M_Current_Fiscal_Quarter_Quota__c</fullName>
    <description>Created to support 7M calendar for Anesthesia and EMS</description>
    <formula>AND(
MONTH(Date__c) &lt;=  X7M_Current_Fiscal_Month_Number__c  ,
X7M_Current_Fiscal_Quarter_Number__c  = Fiscal_Quarter_Number__c,
YEAR(Date__c) = YEAR(TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7M Current Fiscal Quarter Quota</label>
    <type>Checkbox</type>
</CustomField>