fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/X7M_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>X7M_Days_Remaining__c</fullName>
    <formula>Business_Days__r.DAYS_LEFT_IN_7M_MONTH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7M Days Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>