fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/X7M_Days_Remaining_Yr__c.field-meta.xml
<CustomField>
    <fullName>X7M_Days_Remaining_Yr__c</fullName>
    <description>Created to support 7 Month calendar for Anesthesia and EMS</description>
    <formula>Business_Days__r.DAYS_LEFT_IN_7M_OVERALL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7M Days Remaining Yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>