fullSandbox11072023/force-app/main/default/objects/Territory_Quota__c/fields/X7M_Fiscal_Quarter_Number__c.field-meta.xml
<CustomField>
    <fullName>X7M_Fiscal_Quarter_Number__c</fullName>
    <description>Created to support 7 Month calendar for Anesthesia and EMS</description>
    <formula>/*2021*/
if(AND(Date__c &gt;= DATEVALUE(&quot;2021-06-02&quot;),Date__c &lt; DATEVALUE(&quot;2021-09-28&quot;)),3,
if(AND(Date__c &gt;= DATEVALUE(&quot;2021-09-28&quot;),Date__c &lt;= DATEVALUE(&quot;2021-01-02&quot;)),4,

/*2020*/
if(AND(Date__c &gt;= DATEVALUE(&quot;2020-06-30&quot;),Date__c &lt; DATEVALUE(&quot;2020-09-29&quot;)),3,
if(AND(Date__c &gt;= DATEVALUE(&quot;2020-09-29&quot;),Date__c &lt;= DATEVALUE(&quot;2020-12-31&quot;)),4,

0
))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7M Fiscal Quarter Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>